--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/file-saver": "^1.3.0",
+    "angular-file-saver": "^1.1.3",
     "core-js": "^2.4.1",
+    "jspdf": "^1.3.5",
     "rxjs": "^5.5.6",
+    "s": "^0.1.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
